# Ouverium

./: .clang-tidy  .gitignore  Account.drawio  CMakeLists.txt  Formal Language.drawio  Interface.drawio  LICENSE  ODP.drawio  README.md  TookanTook System.drawio  compilateur.txt  example.fl  gmon.out  interpreter  prof.txt  prog  test.fl  test.h  test2.fl
.devcontainer/: devcontainer.json
.github/workflows/: cmake-multi-platform.yml  continuous-deployment.yml  continuous-integration.yml
FLCompilator/: example.fl  main  te.fl  test.fl
FLCompilator/engine/parser/: Position.fl  Standard.fl
FLCompilator/engine/parser/expression/: Expression.fl  FunctionCall.fl  FunctionDefinition.fl  Property.fl  Symbol.fl  Tuple.fl
FLCompilator/librairies/: ArrayList.fl  LinkedList.fl  String.fl  Type.fl
FLCompilator/librairies/data_structures/: ArrayList.fl  Iterable.fl  Iterator.fl  LinkedList.fl  List.fl  Map.fl  Set.fl
FLCompilator/librairies/math/: Arithmetic.fl  Integer.fl
FLCompilator/src/: main  main.cpp
FLCompilator/src/compilator/javascript/: Translator.cpp  Translator.hpp  functions.js
FLCompilator/src/interpreter/: Context.cpp  Context.hpp  Function.cpp  Function.hpp  Interpreter.cpp  Interpreter.hpp  InterpreterError.hpp  Object.cpp  Object.hpp  Reference.cpp  Reference.hpp  SystemFunctions.cpp
FLCompilator/src/parser/: Standard.cpp  Standard.hpp
Old/: SUPS.drawio  UML.drawio
UML/: Delivre.drawio  Formal Language.drawio  ODP.drawio
UML/Old/: SUPS.drawio  UML.drawio
app/: CMakeLists.txt  main.cpp
docs/: index.md
engine/parser/: Position.fl  Standard.fl
engine/parser/expression/: Expression.fl  FunctionCall.fl  FunctionDefinition.fl  Property.fl  Symbol.fl  Tuple.fl
examples/: example.fl  test.fl  test2.fl  test3.fl
include/: include.h  types.h
include/ouverium/: data.hpp  hash_string.h  include.h  include.hpp  types.h
librairies/: Char.fl  String.fl  Type.fl
librairies/data_structure/: Algorithm.fl  ArrayList.fl  Iterable.fl  LinkedList.fl  List.fl  Map.fl  Set.fl  SortedMap.fl
librairies/data_structure/list/: ArrayList.fl  LinkedList.fl  List.fl
librairies/data_structure/map/: Map.fl  SortedMap.fl
librairies/data_structure/set/: LinkedSet.fl  Set.fl
librairies/data_structures/: ArrayList.fl  Iterable.fl  LinkedList.fl  List.fl
librairies/math/: Rational.fl  Vector.fl
libraries/: Async.fl  Event.fl  File.fl  Range.fl  Socket.fl  Stream.fl  String.fl  Test.fl  Thread.fl  Time.fl  Type.fl  UI.fl
libraries/containers/: Algorithm.fl  ArrayList.fl  ArrayMap.fl  ArraySet.fl  Iterable.fl  LinkedList.fl  List.fl  Map.fl  Set.fl  SortedMap.fl  Tensor.fl
libraries/data_structure/: ArrayList.fl  Iterable.fl  LinkedList.fl  SortedMap.fl
libraries/io/: File.fl  Socket.fl  Stream.fl  TCPSocket.fl  UDPSocket.fl
libraries/math/: Arithmetic.fl  Integer.fl  Matrix.fl  Rational.fl  Vector.fl
libs/: CMakeLists.txt
libs/capi/: CMakeLists.txt
libs/capi/include/ouverium/: include.h  include.hpp
libs/capi/src/: array.c  data.c  function.c  gc.c  gc.h  reference.c
libs/capi/src/system_functions/: array.c  base.c  dll.c  math.c  system_functions.c  types.c  variables.c
libs/compiler/: CMakeLists.txt
libs/compiler/include/ouverium/compiler/: Analyzer.hpp  SimpleAnalyzer.hpp
libs/compiler/include/ouverium/compiler/c/: Code.hpp  Translator.hpp
libs/compiler/include/ouverium/compiler/static/: Analyzer.hpp  Functions.hpp  Reference.hpp
libs/compiler/src/: SimpleAnalyzer.cpp
libs/compiler/src/c/: Functions.cpp  Translator.cpp  Writter.cpp
libs/interpreter/: CMakeLists.txt
libs/interpreter/include/ouverium/interpreter/: Context.hpp  Data.hpp  Function.hpp  GC.hpp  Interpreter.hpp  Object.hpp  Reference.hpp
libs/interpreter/src/: Context.cpp  Data.cpp  GC.cpp  Interpreter.cpp  Object.cpp  Reference.cpp
libs/interpreter/src/system_functions/: Array.cpp  Base.cpp  Dll.cpp  Math.cpp  System.cpp  SystemFunction.cpp  SystemFunction.hpp  Types.cpp  UI.cpp
libs/parser/: CMakeLists.txt
libs/parser/src/: Expressions.cpp  Standard.cpp  Types.cpp
libs/types/: CMakeLists.txt
resources/: CMakeLists.txt  init.c
resources/librairy/: CMakeLists.txt  array.c  array.h  data.c  data.h  function.c  function.h  gc.c  gc.h  reference.c  reference.h  system_functions.c  system_functions.h  virtual_tables.c  virtual_tables.h
src/: Expressions.cpp  Expressions.hpp  GUIApp.cpp  GUIApp.hpp  Types.cpp  Types.hpp  Utils.cpp  Utils.hpp  main.cpp
src/capi/: array.c  data.c  function.c  gc.c  gc.h  reference.c  system_functions.c
src/capi/system_functions/: array.c  base.c  dll.c  math.c  system_functions.c
src/compiler/: AnalyzedExpressions.hpp  Analyzer.cpp  Analyzer.hpp  Expressions.hpp  Functions.cpp  Functions.cpp_  Functions.hpp  SimpleAnalyzer.cpp  SimpleAnalyzer.hpp  Standard.cpp  Standard.hpp  main2.cpp
src/compiler/c/: Code.hpp  Functions.cpp  Structures.hpp  Translator.cpp  Translator.hpp  Writter.cpp  compilateur.txt
src/compiler/javascript/: Translator.cpp  Translator.hpp  functions.js
src/compiler/static/: Analyzer.hpp  Reference.hpp  Test.hpp
src/interpreter/: Context.cpp  Context.hpp  Data.cpp  Data.hpp  Function.hpp  GC.cpp  GC.hpp  Interpreter.cpp  Interpreter.hpp  Object.cpp  Object.hpp  Reference.cpp  Reference.hpp
src/interpreter/system_functions/: Array.cpp  Array.hpp  ArrayList.cpp  ArrayList.hpp  Base.cpp  Base.hpp  Dll.cpp  Dll.hpp  Math.cpp  Math.hpp  Streams.cpp  Streams.hpp  String.cpp  String.hpp  System.cpp  System.hpp  SystemFunction.cpp  SystemFunction.hpp  Types.cpp  Types.hpp  UI.cpp  UI.hpp
src/parser/: Expressions.cpp  Expressions.hpp  Parser.hpp  Position.hpp  Standard.cpp  Standard.hpp
src/parser/expression/: Expression.cpp  Expression.hpp  FunctionCall.hpp  FunctionDefinition.hpp  Property.hpp  Symbol.hpp  Tuple.hpp
tests/: CMakeLists.txt  euclide.fl  string.fl  ui.fl
vscode/ouver/: CHANGELOG.md  package.json
vscode/ouver/syntaxes/: ouver.tmLanguage.json
vscode/ouverium/: README.md  package.json  vsc-extension-quickstart.md
vscode/ouverium/syntaxes/: ouverium.tmLanguage.json
(+73 files in other folders)
