FILE(GLOB_RECURSE ouverium_sources main.cpp*)

add_executable(ouverium ${ouverium_sources})
target_link_libraries(ouverium PRIVATE ouverium_options)

target_link_libraries(ouverium PRIVATE ouverium_interpreter)
find_package(Boost CONFIG REQUIRED COMPONENTS dll)
target_link_libraries(ouverium PRIVATE Boost::dll)
if (UNIX)
    find_library(READLINE_LIB readline)
    if (READLINE_LIB_FOUND)
        target_link_libraries(ouverium PRIVATE ${READLINE_LIB})
        add_compile_definitions(READLINE)
    else()
        message(WARNING "Readline is not installed.")
    endif()
endif()
target_link_libraries(ouverium PRIVATE ${Readline})
if(OUVERIUM_WITH_WXWIDGET)
    find_package(wxWidgets REQUIRED COMPONENTS core)
    if (TARGET wxWidgets::wxWidgets)
        target_link_libraries(ouverium PRIVATE wxWidgets::wxWidgets)
    elseif(wxWidgets_USE_FILE)
        include(${wxWidgets_USE_FILE})
        target_link_libraries(ouverium PRIVATE ${wxWidgets_LIBRARIES})
    else()
        target_link_libraries(ouverium PRIVATE wx::core)
    endif()
    target_compile_definitions(ouverium PRIVATE OUVERIUM_WXWIDGETS)
endif()

install(TARGETS ouverium)
