FILE(GLOB_RECURSE interpreter_sources src/*)

add_library(ouverium_interpreter ${interpreter_sources})
target_include_directories(ouverium_interpreter PUBLIC include)
target_link_libraries(ouverium_interpreter PRIVATE ouverium_options)

target_link_libraries(ouverium_interpreter PUBLIC ouverium_types)
target_link_libraries(ouverium_interpreter PUBLIC ouverium_parser)
if(WIN32)
    target_link_libraries(ouverium PRIVATE ws2_32 mswsock)
endif()
find_package(Boost COMPONENTS asio dll)
target_link_libraries(ouverium_interpreter PRIVATE Boost::asio Boost::dll)
if(OUVERIUM_WITH_WXWIDGET)
    find_package(wxWidgets REQUIRED COMPONENTS core base webview)
    include(${wxWidgets_USE_FILE})
    target_link_libraries(ouverium_interpreter PRIVATE ${wxWidgets_LIBRARIES})
    target_compile_definitions(ouverium_interpreter PRIVATE OUVERIUM_WXWIDGETS)
endif()
